fix logo being cut off on mobile

--- a/common/common.scss
+++ b/common/common.scss
@@ -1697,10 +1697,6 @@ body {
 .d-header {
   height: 5em !important;
   margin-bottom: 0 !important;
-
-  #site-logo {
-    max-width: unset !important;
-  }
 }
 
 /****************************
